# simple-factory

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/include/: Bar.hh  Foo.hh  Product.hh
demo/src/: main.cc
include/: Factory.hh
src/: main.cc
